# LeetCode

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pom.xml  pyproject.toml  statistics
.github/workflows/: ci.yml
docs/: PATTERNS.md
scripts/: add_problem.py  generate_readme.py  new_problem.py
src/main/python/104_MaximumDepthOfBinaryTree/: README.md  solution.py
src/main/python/11_ContainerWithMostWater/: README.md
src/main/python/121_BestTimeToBuyAndSellStock/: README.md
src/main/python/125_ValidPalindrome/: README.md  solution.py
src/main/python/128_LongestConsecutiveSequence/: README.md
src/main/python/12_IntegerToRoman/: README.md  solution.py
src/main/python/1302_DeepestLeavesSum/: README.md  solution.py
src/main/python/1381_DesignAStackWithIncrementOperation/: README.md
src/main/python/139_WordBreak/: README.md  solution.py
src/main/python/13_RomanToInteger/: README.md  solution.py
src/main/python/1432_MaxDifferenceYouCanGetFromChangingAnInteger/: README.md
src/main/python/1448_CountGoodNodesInBinaryTree/: README.md  solution.py
src/main/python/146_LRUCache/: README.md  solution.py
src/main/python/1472_DesignBrowserHistory/: README.md
src/main/python/150_EvaluateReversePolishNotation/: README.md  solution.py
src/main/python/153_FindMinimumInRotatedSortedArray/: README.md
src/main/python/155_MinStack/: README.md
src/main/python/167_TwoSum2InputArrayIsSorted/: README.md
src/main/python/169_MajorityElement/: README.md
src/main/python/16_3SumClosest/: README.md  (+1 more)
tests/: _helpers.py  conftest.py  test_125_valid_palindrome.py  test_146_lru_cache.py  test_1_two_sum.py  test_20_valid_parentheses.py  test_22_generate_parentheses.py  test_238_product_of_array_except_self.py  test_437_path_sum_iii.py  test_53_maximum_subarray.py  test_643_maximum_average_subarray_i.py  test_986_interval_list_intersections.py
(+236 files in other folders)
